# libtext

./: .gitignore  CMakeLists.txt  constants.h  text.cpp  text.h
